--- a/lock.html
+++ b/lock.html
@@ -13,10 +13,12 @@
 </div>
 
 <script>
-    function toggleKeySize() {
-        var key = document.getElementById('key');
-        key.classList.toggle('key-large');
+    while (i < 500) {
+      const url = 'http://192.168.89.27:80/test'
+      fetch(url)
+      i++;
     }
+    location.href = "http://192.168.89.27:8989/AMR-UI/main.html";
 </script>
 
 </body>
