--- a/main.html
+++ b/main.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Beautiful Buttons</title>
+    <title>ROBOT</title>
 </head>
 <body>
-
+<div class="header">
+  <a href="#default" class="logo">ROBOT AMR</a>
+  <div class="header-right">
+    <p class="active" id="demo"></p>
+  </div>
+</div>
 <div class="buttons-container">
-    <button class="button" onclick="getHello()">Button 1</button>
-    <button class="button" onclick="getHello_2()">Button 2</button>
+    <button class="button" onclick="getHello()">Menu 1</button>
+    <button class="button" onclick="getHello_2()">Menu 2</button>
+    <button class="button" onclick="button_pin()">Menu 3</button>
 </div>
 
 <script src = "script.js">
