--- a/main.html
+++ b/main.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 <div class="header">
+    <!-- <p id="demo"></p> -->
   </div>
 </div>
 <div class="buttons-container">
-    <img class="button" onclick="getHello()" src="image/delivery.png"></img>
-    <img class="button" onclick="getHello_2()" src="image/guide.png"></img>
-    <img class="button" src="image/setting.png"></img>
+    <img class="button" onclick="delivery()" src="image/delivery.png" width="300" height="300"></img>
+    <img class="button" onclick="getHello_2()" src="image/guide.png" width="300" height="300"></img>
+    <img class="button" src="image/setting.png" width="300" height="300"></img>
 </div>
 <div class="buttons-container">
     <img id="myImg" width="0" height="100">
-    <img class="button-open" onclick="button_pin()" id="bimg">
+    <img class="button-open" onclick="button_pin()" id="bimg" width="300" height="60">
 </div>
 <script src = "script.js">
 </script>
