--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 </div>
 <div class="buttons-container">
     <img class="button" onclick="delivery()" src="image/delivery.png" width="300" height="300"></img>
-    <img class="button" onclick="getHello_2()" src="image/guide.png" width="300" height="300"></img>
-    <img class="button" src="image/setting.png" width="300" height="300"></img>
+    <img class="button" onclick="guide()" src="image/guide.png" width="300" height="300"></img>
+    <img class="button" onclick="control()" src="image/setting.png" width="300" height="300"></img>
 </div>
 <div class="buttons-container">
     <img id="myImg" width="0" height="100">
