--- a/control.html
+++ b/control.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-    <p id="demo"></p>
+    <!-- <p id="demo"></p> -->
   </div>
 </div>
 <div class = "grid-container">
